--- a/less/topic.less
+++ b/less/topic.less
@@ -324,9 +324,38 @@
             display: none;
         }
         .post-header {
-            background: linear-gradient(to right,rgba(207,36,106,1) 0%,rgba(255,148,46,1) 100%) repeat scroll 0 0 rgba(0,0,0,0);
-            border-left: 1px solid #cf246a;
-            border-right: 1px solid #ff942e;
+            background: @exodo-gradient;
+            border-left: 1px solid @exodo-primary;;
+            border-right: 1px solid @exodo-secondary;
+            display: block;
+            height: 34px;
+            line-height: 23px;
+            width: 100%;
+            padding: 5px 10px;
+            color: #fff;
+			font-weight: bold;
+            .post-date {
+                zoom: 1;
+                filter: alpha(opacity=70);
+                opacity: 0.7;
+                span {
+                    i {
+                        margin-right: 3px;
+                    }
+                }
+            }
+            .post-meta {
+                .post-index a {
+                    color: white;
+                    font-weight: bold;
+                }
+            }
+        }
+		
+        .post-header.dark {
+            background: @exodo-gradient-darkmode;
+            border-left: 1px solid @exodo-primary-darkmode;
+            border-right: 1px solid @exodo-secondary-darkmode;
             display: block;
             height: 34px;
             line-height: 23px;
