--- a/less/variables.less
+++ b/less/variables.less
@@ -30,3 +30,8 @@
 @exodo-category-threadstats-size:		13%;
 @exodo-category-threadlastpost-size:	23%;
 @exodo-category-threadimod-size:		3%;
+
+@exodo-primary-darkmode: #2d2d2d;
+@exodo-secondary-darkmode: #007878;
+@exodo-bg-color-darkmode: #2E3539;
+@exodo-gradient-darkmode:			linear-gradient(to right, @exodo-primary-darkmode 0px, @exodo-secondary-darkmode 100%) repeat scroll 0px 0px transparent;
