--- a/less/categories.less
+++ b/less/categories.less
@@ -37,6 +37,18 @@
 			}
 		}
 	}
+	.category-title.dark {
+		color: black;
+		font-size: 22px;
+		
+		@media (max-width: @screen-xs-min) {
+			margin-top: 15px;
+			
+			p {
+				font-size: 14px;
+			}
+		}
+	}
 	
 	.category-info {
 		padding: 10px;
