--- a/less/variables.less
+++ b/less/variables.less
@@ -31,7 +31,12 @@
 @exodo-category-threadlastpost-size:	23%;
 @exodo-category-threadimod-size:		3%;
 
-@exodo-primary-darkmode: #2d2d2d;
-@exodo-secondary-darkmode: #007878;
-@exodo-bg-color-darkmode: #2E3539;
+@exodo-primary-darkmode: #070C2A;
+@exodo-secondary-darkmode: #346074;
+@exodo-bg-color-darkmode: #151C2F;
 @exodo-gradient-darkmode:			linear-gradient(to right, @exodo-primary-darkmode 0px, @exodo-secondary-darkmode 100%) repeat scroll 0px 0px transparent;
+@exodo-panel-darkmode: #272F46;
+@exodo-dark-darkmode: #898A88; 
+@exodo-text-color-darkmode: @exodo-dark-darkmode;
+@exodo-link-color-darkmode: @exodo-primary;
+@exodo-link-hover-color-darkmode: @exodo-secondary;
