--- a/less/header.less
+++ b/less/header.less
@@ -236,6 +236,14 @@
 }
 .header {
 
+
+    background-color: @exodo-dark;
+	
+	.navbar-fix {
+		
+	}
+	
+	
 	#user_label {
 		img {
 			border: 1px solid #454;
@@ -254,12 +262,13 @@
 	}
 
 	.forum-logo {
-		float: left;
-		max-height: 30px;
-		max-width: auto;
-		padding-top: 16px;
-		padding-left: 5px;
-		padding-right: 5px;
+		max-width: 100px;
+		
+		
+		padding-top: 18px;
+		padding-bottom: 0px;
+		margin-left: 10px;
+		
 	}
 	
 
@@ -296,6 +305,10 @@
 			}
 		}
 
+		.dropdown {
+			
+			color: #9d9d9d;
+		}
 		.dropdown-toggle {
 			display: inline-block;
 			padding-left: 5px;
