--- a/less/style.less
+++ b/less/style.less
@@ -327,6 +327,15 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 	
 	dd {
 		color: @exodo-text-color-darkmode !important;
+		span {
+			
+		color: @exodo-text-color-darkmode !important;	
+		}
 		
+		i {
+			
+		color: @exodo-text-color-darkmode !important;	
+		}
+	
 	}
 }
