Low topic bar fixes

--- a/less/style.less
+++ b/less/style.less
@@ -303,6 +303,27 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 }
 //END: FIXES FOR BS3, may need to remove these when we get out of the RC releases
 
+#adminbutton {
+	
+	padding-left: 8px;
+	border-left: 1px solid #e4e4e4;
+}
+
+#editbutton {
+	
+	padding-left: 8px;
+	border-left: 1px solid #e4e4e4;
+}
+
+#dropdowntopic {
+	
+	.dropdown-menu {
+	min-width: 117px;
+	padding: 5px 5px;
+	}
+}
+
+
 .panel.dark {
 	background-color: @exodo-panel-darkmode;
 	small {
