new buttons test

--- a/less/category.less
+++ b/less/category.less
@@ -40,7 +40,7 @@
                         margin: 0;
                         > li {
                             > a {
-                                padding: 3px 6px !important;
+                                /* padding: 3px 6px !important; */
                             }
                         }
                     }
@@ -50,25 +50,35 @@
         .category-head-bottom {
             clear: both;
             .category-head-tools {
+				
+				/*
                 background: white;
                 border: 1px solid #d4d4d4;
                 clear: both;
                 display: block;
                 height: 30px;
                 width: 100%;
+				
+				*/
                 .tool {
-                    background: none;
-                    border: none;
-                    color: #838383;
-                    font-size: 11px;
-                    height: 30px;
-                    line-height: 30px;
-                    margin: 0 7px;
-                    padding: 0;
+					
+					/* background: none; */
+					/* border: none; */
+					/* color: #838383;
+					
+					height: 30px; */
+					/* line-height: 30px; */
+					margin: 0 5px 5px 0px;
+					font-size: 11px;
+					padding-right: 0px !important;
+					/* padding: 0; */
+					
+					
                 }
                 .btn-group.open .dropdown-toggle, .btn-group.open .dropdown-toggle:active,  {
                     box-shadow: none;
                     outline: 0;
+					
                 }
             }
         }
