--- a/less/style.less
+++ b/less/style.less
@@ -78,7 +78,7 @@ body {
     height: 32px;
     line-height: 32px;
     padding: 0px 0px 0px 12px;
-	border-radius: 4px;
+	border-radius: 4px !important;
     /*border-radius: 0;
     -moz-border-radius: 0px;
     -webkit-border-radius: 0px; */
