button groups and pagination fixes

--- a/less/category.less
+++ b/less/category.less
@@ -10,7 +10,8 @@
             }
         }
         .category-head-middle {
-            margin-bottom: 15px;
+            margin-bottom: 5px;
+			margin-top: 5px;
             > div {
                 clear: right;
                 float: left;
@@ -21,9 +22,9 @@
                 display: block;
                 position: relative;
                 > div {
-                    bottom: 0;
+                    //bottom: 0;
                     position: absolute;
-                    right: 0;
+                    //right: 0;
                     .pagination-count {
                         color: @exodo-lightdark;
                         display: inline-block;
