--- a/less/style.less
+++ b/less/style.less
@@ -95,6 +95,8 @@ body {
 	}
     span {
         background-color: @exodo-primary;
+		border-bottom-right-radius: 4px !important;
+		border-top-right-radius: 4px !important;
         display: inline-block;
         font: normal 13px;
         font-size: 16px;
@@ -102,7 +104,7 @@ body {
         height: 32px;
         line-height: 32px;
         margin-left: 10px;
-        padding: 0 10px;
+        padding: 0 8px;
     }
 	
 	
