New threaddetails icons, category icons & pagination reorder, going back to container-fluid, css category fixes

--- a/less/category.less
+++ b/less/category.less
@@ -1,4 +1,7 @@
 .category {
+	.pagination {
+		margin: 0;
+	}
     .category-head {
         margin-bottom: 7px;
         .category-head-top {
@@ -10,20 +13,20 @@
             }
         }
         .category-head-middle {
-            margin-bottom: 5px;
-			margin-top: 5px;
+            margin-bottom: 8px;
+			margin-top: 8px;
             > div {
                 clear: right;
                 float: left;
                 height: 32px;
-                width: 50%;
+                //width: 50%;
             }
             .category-head-pagination {
                 display: block;
                 position: relative;
                 > div {
                     //bottom: 0;
-                    position: absolute;
+                    //position: absolute;
                     //right: 0;
                     .pagination-count {
                         color: @exodo-lightdark;
@@ -81,9 +84,7 @@
                     outline: 0;
 					
                 }
-            }
-			
-			
+            }	
 			
         }
     }
