--- a/less/header.less
+++ b/less/header.less
@@ -513,10 +513,13 @@
 	margin: 0 !important;
 }
 
-.container-fluid {
 	.logo-image {
 		padding: 16px 16px 16px 0;
 	}
-}
-
 */
+
+.container-fluid {
+	
+padding-left: 50px;
+padding-right: 50px;
+}
