wide category icons

--- a/less/category.less
+++ b/less/category.less
@@ -18,7 +18,7 @@
             > div {
                 clear: right;
                 float: left;
-                height: 32px;
+                height: 22px;
                 //width: 50%;
             }
             .category-head-pagination {
@@ -44,7 +44,7 @@
                         margin: 0;
                         > li {
                             > a {
-                                /* padding: 3px 6px !important; */
+                                 padding: 1px 9px !important; 
                             }
                         }
                     }
@@ -463,3 +463,13 @@
 }
 
 
+
+
+.pagination-foot {
+    margin: 0;
+    div > ul > li {
+        > a {
+             padding: 1px 9px !important; 
+        }
+    }
+}
