--- a/less/style.less
+++ b/less/style.less
@@ -74,10 +74,11 @@ body {
     border: 0;
     color: #fff;
     display: block;
-    font: normal 13px;
-    height: 32px;
-    line-height: 32px;
-    padding: 0px 0px 0px 12px;
+    font: normal;
+	font-size: 10px !important;
+    height: 22px;
+    line-height: 22px;
+    padding: 0px 0px 0px 10px !important;
 	border-radius: 4px !important;
     /*border-radius: 0;
     -moz-border-radius: 0px;
@@ -98,12 +99,12 @@ body {
 		border-bottom-right-radius: 4px !important;
 		border-top-right-radius: 4px !important;
         display: inline-block;
-        font: normal 13px;
-        font-size: 16px;
+        /*font: normal 13px;
+        font-size: 13px; */
         font-weight: bold;
-        height: 32px;
-        line-height: 32px;
-        margin-left: 10px;
+        height: 22px;
+        line-height: 22px;
+        margin-left: 8px;
         padding: 0 8px;
     }
 	
