mobile topic theme changes

--- a/less/topic.less
+++ b/less/topic.less
@@ -179,7 +179,14 @@
                             }
                             span.username-field {
                                 font-size: 20px;
-                                color: #cf246a;
+                                color: @exodo-primary;
+                                cursor: pointer;
+                                word-wrap: break-word;
+                            }
+							
+                            span.username-field-mini {
+                                font-size: 20px;
+                                color: white;
                                 cursor: pointer;
                                 word-wrap: break-word;
                             }
@@ -462,4 +469,11 @@
         position: relative;
         text-align: center;
     }
+}
+
+
+span.username-field-mini {
+    color: white;
+    cursor: pointer;
+    word-wrap: break-word;
 }
