--- a/less/topic.less
+++ b/less/topic.less
@@ -11,6 +11,18 @@
 			text-transform:uppercase;
 		}
     }
+	
+    .topic-head-top-mini {
+        h1 {
+            font-size: 20px;
+            margin: 10px 0;
+            padding: 0;
+			
+        }
+		h1:first-letter {
+			text-transform:uppercase;
+		}
+    }
     .topic-head-middle {
         margin-bottom: 15px;
         > div {
@@ -332,15 +344,20 @@
         }
         .post-header {
             background: @exodo-gradient;
-            border-left: 1px solid @exodo-primary;;
+            border-left: 1px solid @exodo-primary;
             border-right: 1px solid @exodo-secondary;
             display: block;
             height: 34px;
             line-height: 23px;
             width: 100%;
-            padding: 5px 10px;
+            //padding: 5px 10px;
             color: #fff;
 			font-weight: bold;
+			
+			.post-header-padding{
+				
+				padding: 5px 10px;
+			}
             .post-date {
                 zoom: 1;
                 filter: alpha(opacity=70);
@@ -367,9 +384,14 @@
             height: 34px;
             line-height: 23px;
             width: 100%;
-            padding: 5px 10px;
+            //padding: 5px 10px;
             color: #fff;
 			font-weight: bold;
+			
+			.post-header-padding{
+				
+				padding: 5px 10px;
+			}
             .post-date {
                 zoom: 1;
                 filter: alpha(opacity=70);
@@ -476,4 +498,9 @@ span.username-field-mini {
     color: white;
     cursor: pointer;
     word-wrap: break-word;
+}
+
+span.avatarxs {
+	margin: -1px !important;
+	//margin-top: -5px !important;
 }
