Now mods and admins can see flags of each post, new buttons and css fixes for mobiles work on progress

--- a/less/style.less
+++ b/less/style.less
@@ -112,6 +112,43 @@ body {
 	
 }
 
+
+.btn-exodin {
+    //background-color: @exodo-primary;
+    //border: 2px;
+	//border-color: @exodo-dark;
+    //color: #fff;
+    //display: block;
+    //font: normal;
+	
+	//font-size: 12px !important;
+    //height: 22px;
+    //line-height: 22px;
+    //padding: 0px 0px 0px 10px !important;
+	//border-radius: 4px !important;
+    /*border-radius: 0;
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px; */
+    &:hover {
+		background-color: @exodo-primary;
+		color: #fff;
+	    //background-color: @exodo-dark;
+        //box-shadow: 0 0 0 3px #E4E4E4;
+        //color: #fff;
+        text-decoration: none;
+    }
+	
+	&:focus {
+		
+		//color: #fff;
+	}
+	
+	
+}
+
+
+
+
 .btn-exodo-mini {
 
     border: 0;
