--- a/less/topic.less
+++ b/less/topic.less
@@ -1,3 +1,6 @@
+.btn-link i.fa {
+	vertical-align: none;
+}
 .topic-head, .topic-foot {
     margin-bottom: 20px;
     .topic-head-top {
@@ -30,10 +33,12 @@
             float: left;
             height: 32px;
             width: 50%;
+			
         }
         .topic-head-pagination {
             display: block;
             position: relative;
+			float:right;
             > div {
                 bottom: 0;
                 position: absolute;
@@ -61,6 +66,8 @@
             }
         }
     }
+	
+	
 }
 .topic {
     .post-content {
@@ -204,6 +211,9 @@
                             }
                         }
                     }
+					dl {
+						margin-bottom: 5px;
+					}
                     .userinfo-extra{
 	                    font-size: 10px;
 						dt {
@@ -211,6 +221,7 @@
 						    margin-right: 10px;
 						    width: auto;
 						}
+						
                     }
                 }
                 .post-block {
