buttons fix for topic.tpl in paginated mode

--- a/less/topic.less
+++ b/less/topic.less
@@ -3,6 +3,10 @@
 }
 .topic-head, .topic-foot {
     margin-bottom: 10px;
+	.headup {
+		
+		margin-bottom: 40px !important;
+	}
     .topic-head-top {
         h1 {
             font-size: 30px;
