css for composer selects

--- a/less/style.less
+++ b/less/style.less
@@ -443,3 +443,9 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 	
 	}
 }
+
+.title-container .composer-list{
+	
+	padding-left: 15px !important;
+	padding-right: 15px !important;
+}
