--- a/less/footer.less
+++ b/less/footer.less
@@ -7,7 +7,7 @@
     padding:10px 0 0 0;
     border-bottom:1px solid @exodo-border-color;
     color: #d8d8d8;
-    border-top:1px solid @exodo-border-color;
+    //border-top:1px solid @exodo-border-color;
     a {
         color: @exodo-lightdark;
     }
@@ -58,4 +58,14 @@
 			}
 			.social-em:hover {
 				color: #f39c12;
+			}
+			.social-ng:hover {
+				color: @exodo-dark;
+			}
+			
+			.scrollup-ic:hover {
+				color: @exodo-primary;
+			}
+			
+			.scrollup {
 			}
