--- a/less/style.less
+++ b/less/style.less
@@ -449,3 +449,14 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 	padding-left: 15px !important;
 	padding-right: 15px !important;
 }
+
+//ajustes de register.tpl para movil
+.input-group-addon {
+	
+	border: 1px solid #CCC !important;
+	font-size: 12px !important;
+}
+.input-group-addon, .input-group-btn {
+	white-space: normal !important;
+	
+}
