changed class os it doesnt break other button inputs

--- a/less/style.less
+++ b/less/style.less
@@ -451,12 +451,10 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 }
 
 //ajustes de register.tpl para movil
-.input-group-addon {
+.input-register{
 	
 	border: 1px solid #CCC !important;
 	font-size: 12px !important;
-}
-.input-group-addon, .input-group-btn {
 	white-space: normal !important;
 	
 }
