--- a/modules/composer.less
+++ b/modules/composer.less
@@ -333,6 +333,10 @@ html.composing {
 			border: 1px solid lightgray;
 			box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
 			padding: 15px;
+			
+			            //overflow:auto;
+			            //height:95%;
+			
 		}
 
 		.btn-group {
