composer bug for large messages fixed

--- a/modules/composer.less
+++ b/modules/composer.less
@@ -134,7 +134,7 @@ html.composing {
 	.write-preview-container {
 		height:100%;
 		margin: 0 0;
-		min-height: 500px;
+		/* min-height: 500px; */
 		> div {
 			height:100%;
 		}
