--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,5 @@
 //este import es de exodo
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,600&subset=latin,cyrillic-ext);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,600&subset=latin,cyrillic-ext);
 
 .brand-primary {
 	color: @exodo-primary;
