--- a/less/variables.less
+++ b/less/variables.less
@@ -9,15 +9,13 @@
 @exodo-primary:         	#CF246A;
 @exodo-lightprimary:        lighten(@exodo-primary, 5%);
 @exodo-lighterprimary:      lighten(@exodo-primary, 10%);
-@exodo-darkprimary:         darken(@exodo-primary, 5%);
-@exodo-darkerprimary:       darken(@exodo-primary, 10%);
 @exodo-secondary:       	#FF942E;
-@exodo-dark:         		#2E3539;
+@exodo-dark:         		#2E3539; //botones y letras small
 @exodo-lightdark:			#8D8D8D;
 @exodo-lighterdark:			#E4E4E4;
 @exodo-gradient:			linear-gradient(to right, @exodo-primary 0px, @exodo-secondary 100%) repeat scroll 0px 0px transparent;
 
-@exodo-bg-color: 			#F6F6F6;
+@exodo-bg-color: 			#F6F6F6; //se usa en pinneds
 @exodo-text-color:			@exodo-dark;
 @exodo-link-color:			@exodo-primary;
 @exodo-link-hover-color:	@exodo-primary;
@@ -31,12 +29,25 @@
 @exodo-category-threadlastpost-size:	23%;
 @exodo-category-threadimod-size:		3%;
 
-@exodo-primary-darkmode: #070C2A;
-@exodo-secondary-darkmode: #346074;
-@exodo-bg-color-darkmode: #151C2F;
-@exodo-gradient-darkmode:			linear-gradient(to right, @exodo-primary-darkmode 0px, @exodo-secondary-darkmode 100%) repeat scroll 0px 0px transparent;
-@exodo-panel-darkmode: #272F46;
-@exodo-dark-darkmode: #898A88; 
+//dark
+@exodo-primary-darkmode:	#009f9f; //#009797; //#00a3a3;
+@exodo-darkprimary:         darken(@exodo-primary, 5%);
+@exodo-darkerprimary:       darken(@exodo-primary, 10%);
+@exodo-secondary-darkmode: 	#346074;
+@exodo-dark-darkmode:		@exodo-secondary-darkmode;
+@exodo-lightdark-darkmode:	#8D8D8D;
+@exodo-lighterdark-darkmode: #E4E4E4;
+@exodo-gradient-darkmode:	linear-gradient(to right, @exodo-primary-darkmode 0px, @exodo-secondary-darkmode 100%) repeat scroll 0px 0px transparent;
+
+@exodo-bg-color-darkmode: 	#151c2f;
 @exodo-text-color-darkmode: @exodo-dark-darkmode;
-@exodo-link-color-darkmode: @exodo-primary;
-@exodo-link-hover-color-darkmode: @exodo-secondary;
+@exodo-link-color-darkmode: @exodo-primary-darkmode;
+@exodo-link-hover-color-darkmode: @exodo-secondary-darkmode;
+@exodo-border-color-darkmode:		@exodo-lighterdark-darkmode;
+
+@exodo-bg-color-pinned-darkmode: #18273a; //#2f4d73
+@exodo-panel-darkmode: 		#272F46;
+@exodo-dark-darkmode:		#9fa19e; //#898A88;
+@exodo-button-darkmode:		#505150; //exclusivo dark 
+@exodo-userblock-darkmode: #2d2d2d;
+@exodo-postblock-darkmode: #404a4f;
