--- a/less/variables.less
+++ b/less/variables.less
@@ -46,8 +46,8 @@
 @exodo-border-color-darkmode:		@exodo-lighterdark-darkmode;
 
 @exodo-bg-color-pinned-darkmode: #18273a; //#2f4d73
-@exodo-panel-darkmode: 		#272F46;
-@exodo-dark-darkmode:		#9fa19e; //#898A88;
+@exodo-panel-darkmode: 		rgba(55, 55, 55, 0.5); //#272F46;
+@exodo-dark-darkmode:		#b9bcb8; //#9fa19e; //#898A88;
 @exodo-button-darkmode:		#505150; //exclusivo dark 
 @exodo-userblock-darkmode: #2d2d2d;
 @exodo-postblock-darkmode: #404a4f;
