mobile composer fix and darker green for darkmode

--- a/less/variables.less
+++ b/less/variables.less
@@ -30,7 +30,7 @@
 @exodo-category-threadimod-size:		3%;
 
 //dark
-@exodo-primary-darkmode:	#009f9f; //#009797; //#00a3a3;
+@exodo-primary-darkmode:	#008484; //#009f9f; //#009797; //#00a3a3;
 @exodo-darkprimary:         darken(@exodo-primary, 5%);
 @exodo-darkerprimary:       darken(@exodo-primary, 10%);
 @exodo-secondary-darkmode: 	#346074;
