--- a/modules/composer.less
+++ b/modules/composer.less
@@ -29,7 +29,7 @@ html.composing {
 				padding-left: 8px;
 			}
 		}
-
+		
 		.write, .preview {
 			border-bottom: 0;
 			min-height: 100%;
@@ -335,8 +335,12 @@ html.composing {
 			box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
 			padding: 15px;
 			
-			            //overflow:auto;
-			            //height:95%;
+			//small fix for mobile iphone
+			@media (max-width: @screen-xs-min) {
+	            //overflow:auto;
+	            min-height: 200%;
+			}
+			          
 			
 		}
 
