green loading bar only on darkmode & profile button fixed

--- a/less/dark.less
+++ b/less/dark.less
@@ -20,7 +20,7 @@ body.dark {
 }
 
 
-.fade-out {
+.fade-out.dark {
 	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, transparent),color-stop(1, black));
 	background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0), black);
 	background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0), black);
@@ -82,6 +82,12 @@ body.dark {
     }
 }
 
+.btn-primary.dark{
+	background-color: transparent;
+}
+.btn-info.dark{
+	background-color: @exodo-secondary-darkmode;
+}
 
 .btn-exodin.dark {
 	color: #e2e2e2;
@@ -168,7 +174,7 @@ body.dark {
 	color: @exodo-primary-darkmode;
 }
 	 
-.loading-bar {
+.loading-bar.dark {
  	background: @exodo-gradient-darkmode;
 }
 
