composer dark mode

--- a/less/dark.less
+++ b/less/dark.less
@@ -353,3 +353,49 @@ span.username-field-mini {
 	}
 	
 }
+
+
+.composer.dark .composer-container .write-preview-container textarea.write {
+
+	background-color: @exodo-secondary-darkmode;
+}
+.composer.dark .composer-container .preview-container .preview {
+
+        background-color: @exodo-secondary-darkmode;
+}
+.composer.dark {
+	background-color: #EBEFEA !important;
+}
+.composer.dark .composer-container{
+        background-color: transparent !important;
+}
+
+.composer.dark .composer-container .row .btn-toolbar .btn-group {
+         background-color: transparent;
+        border: 0px;
+
+}
+.composer.dark .composer-container .row .btn-toolbar .btn-group .btn-link {
+	background-color: transparent;
+
+}
+.composer.dark .composer-container .row .btn-toolbar .btn-group .btn-link:hover {
+        background-color: @exodo-primary-darkmode; 
+
+}
+
+.composer.dark .composer-container .row .btn-toolbar .tags-container .bootstrap-tagsinput {
+        background-color: transparent;
+
+}
+
+.composer.dark .composer-container .row .btn-toolbar .btn-group .btn-primary {
+        background-color: @exodo-primary-darkmode;
+	border-color: @exodo-primary-darkmode;
+}
+
+
+.composer.dark .composer-container .row .btn-toolbar .btn-group .btn-primary:hover {
+        background-color: @exodo-secondary-darkmode;
+
+}
