--- a/less/topic.less
+++ b/less/topic.less
@@ -151,6 +151,10 @@
     &.deleted {
         -moz-opacity: 0.30;
         opacity: 0.30;
+		.post-content {
+			-moz-opacity: 0.30;
+			opacity: 0.30;
+		}
     }
     .posts  {
         list-style-type: none;
