--- a/modules/composer.less
+++ b/modules/composer.less
@@ -134,7 +134,7 @@ html.composing {
 	.write-preview-container {
 		height:100%;
 		margin: 0 0;
-		/* min-height: 500px; */
+		min-height: 200px;
 		> div {
 			height:100%;
 		}
@@ -219,6 +219,7 @@ html.composing {
 		position: absolute;
 		width: 100%;
 		top: 10px;
+		height: 0px;
 		.pointer;
 
 		.trigger {
