--- a/less/bootstrap/scaffolding.less
+++ b/less/bootstrap/scaffolding.less
@@ -93,9 +93,9 @@ img {
 .img-thumbnail {
   padding: @thumbnail-padding;
   line-height: @line-height-base;
- // background-color: @thumbnail-bg;
- // border: 1px solid @thumbnail-border;
- // border-radius: @thumbnail-border-radius;
+  background-color: @thumbnail-bg;
+  border: 1px solid @thumbnail-border;
+  border-radius: @thumbnail-border-radius;
   .transition(all .2s ease-in-out);
 
   // Keep them at most 100% wide
@@ -147,4 +147,16 @@ hr {
     overflow: visible;
     clip: auto;
   }
+}
+
+
+// iOS "clickable elements" fix for role="button"
+//
+// Fixes "clickability" issue (and more generally, the firing of events such as focus as well)
+// for traditionally non-focusable elements with role="button"
+// see https://developer.mozilla.org/en-US/docs/Web/Events/click#Safari_Mobile
+// Upstream patch for normalize.css submitted: https://github.com/necolas/normalize.css/pull/379 - remove this fix once that is merged
+
+[role="button"] {
+  cursor: pointer;
 }
